[package]
name = "input-device"
version = "0.2.1"
authors = ["Varphone Wong <varphone@qq.com>"]
edition = "2018"

# Metadata for Publish
description = """
Input devices include keyboard, mouse, etc.
"""
documentation = "https://docs.rs/input-device"
homepage = "https://github.com/varphone/input-device"
readme = "README.md"
categories = ["embedded", "gui", "hardware-support"]
license = "MIT"

[dependencies]
bitflags = "1"
serde = { version = "1", optional = true, features = ["serde_derive"] }

[dev-dependencies]
poller = "0.2"

[features]
linux-evdev = []
linux-mousedev = []

[target.'cfg(unix)'.dependencies]
libc = "0.2"
